# cookiecutter_desktop_app

./: LICENSE.md  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  README.MD  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: build.yaml
{{ cookiecutter.project_slug }}/src/: __init__.py  {{ cookiecutter.project_slug }}.py
{{ cookiecutter.project_slug }}/src/ui/: main.py
{{ cookiecutter.project_slug }}/src/utils/: loading.py  resources.py
